[gd_scene load_steps=6 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://platform.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 100 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 300 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 514.705, 434.316 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Platform"]
position = Vector2( 0.0127792, 0.463301 )
scale = Vector2( 32, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 1 )

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2( 512, 710 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( -9, 300 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 1034, 300 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
margin_top = 18.0
margin_right = 1020.0
margin_bottom = 32.0
text = "Score: 0"
align = 1

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 510, 270 )

[node name="Label" type="Label" parent="."]
margin_left = 333.518
margin_top = 480.887
margin_right = 688.518
margin_bottom = 545.887
text = "Left/Right Arrow to Move Left/Right
Up Arrow to Jump

If you cannot move, click inside the browser to focus it."
[connection signal="body_entered" from="DeathZone" to="." method="_on_DeathZone_body_entered"]
